--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">书城</string>
+
+    <!--主页菜单-->
+    <string name="menu_main_please_login">请登录</string>
+    <string name="menu_main_my_message">我的消息</string>
+    <string name="menu_main_sync_bookshelf">同步书架</string>
+    <string name="menu_main_wifi_book">WIFI传书</string>
+    <string name="menu_main_feedback">意见反馈</string>
+    <string name="menu_main_night_mode">夜间模式</string>
+    <string name="menu_main_settings">设置</string>
+    <string name="menu_main_scan_local_book">扫描本地书籍</string>
+
 </resources>
