--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="menu_main_night_mode">夜间模式</string>
     <string name="menu_main_settings">设置</string>
     <string name="menu_main_scan_local_book">扫描本地书籍</string>
+    <string name="to_add">去添加</string>
 
 </resources>
